# trend-api-server

./: .env.example  .gitignore  .gitmodules  CRAWLER_CONFIG_GUIDE.md  Dockerfile  FRONTEND_GUIDE.md  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: common_k8s.yml  main.yml
app/: config.py  constants.py  dependencies.py  main.py
app/background/: __init__.py  timeout_checker.py
app/celery_app/: celery.py
app/db/: __init__.py  hotspot_session.py  session.py  task_repo.py  vector_session.py
app/middleware/: __init__.py  request_logging.py
app/proxy_pool/: __init__.py  models.py  scheduler.py  service.py  service.py.bak
app/schemas/: account.py  common.py  content.py  hotspot.py  proxy.py  push.py  task.py
app/services/: cluster_service.py  content_service.py  hotspot_service.py  push_service.py  vector_service.py
app/utils/: config_manager.py  crawler_config.py  timezone.py  timezone_usage.md
docs/: deployment-guide.md  download.js  frontend-guide.md  init_proxy_tables.py  rest.http  table.sql
docs/func/: addBusinessReport.js  addToPushQueue.js  addTrendWord.js  checkHotspotExists.js  (+10 more)
openspec/: project.md
proxy-agent/: .gitignore  HOME_PROXY_POOL_README.md  MIGRATION_TO_UV.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh
proxy-agent/agent/: __init__.py  heartbeat.py  proxy_manager.py  utils.py  websocket_client.py
proxy-agent/examples/: home_proxy_pool_example.py
trend-admin-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+103 files in other folders)
