[project]
name = "trend-api-server"
version = "0.1.0"
description = "Trend API Server with Celery and Media Crawler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI 相关
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    # Celery 相关
    "celery==5.3.4",
    "redis==4.6.0",
    # 数据库相关
    "aiomysql==0.2.0",
    "pymysql==1.1.0",
    # HTTP 客户端
    "httpx==0.28.1",
    # 工具库
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "loguru==0.7.2",
    "aiofiles==23.2.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
